k8s_tam/base_setup/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-public-front-end-core
  namespace: develop
  annotations:
    # SSl
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - frontendcore.skycom.vn
      secretName: cert-front-end-core-dev
  rules:
    - host: frontendcore.skycom.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-core-web
                port:
                  number: 80
## chỉ chạy lần đầu và thay đổi host cho từng tenant line 41 (p/s: gắn ip domain tới loadbanlencer)
